Fix list z-index

--- a/src/style/ng-geocoder.sass
+++ b/src/style/ng-geocoder.sass
@@ -1,6 +1,7 @@
 .ng-geocoder__list
   margin: 0
   padding: 0
+  z-index: 1
   width: 100%
   list-style: none
   background: #fff
